--- a/css/signup.css
+++ b/css/signup.css
@@ -9,7 +9,7 @@ body {
 
 span {
     font-size: 18px;
-    margin: 60px 0 80px 0;
+    margin: 40px 0 60px 0;
     display: flex;
     font-weight: bold;
     justify-content: center;
@@ -20,7 +20,6 @@ span {
     margin-top: 150px;
     background-color: white;
     padding: 30px;
-    border-radius: 50px;
     text-align: center;
 }
 
@@ -52,12 +51,12 @@ input {
     padding: 5px;
     margin: 15px 0;
     border: none;
-    border-bottom: 2px solid #ccc;
+    border-bottom: 1px solid #ccc;
     font-size: 0.8rem;
 }
 
 select {
-    width: 70%;
+    width: 140px;
     padding: 5px;
     font-size: 0.8rem;
 }
@@ -68,16 +67,17 @@ select {
 }
 
 .btn-signup {
-    width: 85px;
+    width: 300px;
     height: 30px;
     padding: 3px;
-    background-color: #3D86E7;
-    color: white;
+    background-color: #EDF2F9;
+    color: black;
     border: none;
     border-radius: 5px;
     font-size: 1rem;
     cursor: pointer;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .btn {
@@ -85,5 +85,6 @@ select {
 }
 
 .btn-signup:hover {
-    text-decoration: underline;
+    background-color: #3D86E7;
+    color: white;
 }
