--- a/css/UserMyportal.css
+++ b/css/UserMyportal.css
@@ -10,6 +10,16 @@ body {
     background-color: blueviolet;
 }
 
+.category {
+    color: #748194;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.category.active {
+    color: black;
+}
+
 #container {
     width: 100%;
     height: 460px;
@@ -113,40 +123,17 @@ body {
 
 /* --------------탭------------- */
 .tabs-container {
-    width: 64%;
-    background-color: #f8f9fc;
-    padding: 10px 20px;
+    width: 100%;
     border-bottom: 2px solid #d3d7e2;
     margin-top: 15px;
 }
 
-.tabs {
-    list-style-type: none;
-    display: flex;
-    padding: 0;
-    margin: 0;
-    border-bottom: 2px solid #007bff;
+.tb-tab {
+    color: #748194;
 }
 
-.tab-item {
-    padding: 10px 20px;
-    margin-right: 10px;
-    cursor: pointer;
-    font-size: 16px;
-    color: #333;
-    border: 1px solid transparent;
-    border-radius: 5px 5px 0 0;
-}
-
-.tab-item:hover {
-    background-color: #e9ecef;
-}
-
-.tab-item.active {
-    background-color: white;
-    border: 1px solid #d3d7e2;
-    border-bottom: 2px solid white;
-    color: #007bff;
+.tb-tab.active {
+    border-bottom: 2px solid #2C7BE5 !important;
     font-weight: bold;
 }
 
@@ -166,22 +153,22 @@ thead th {
 }
 
 tbody td {
-    padding: 10px;
+    font-size: 13px;
+    padding: 3px 3px;
     border-bottom: 1px solid #ddd;
     text-align: center;
 }
 
-button {
-    padding: 5px 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
+.detail-btn {
+    width: 50px;
+    height: 20px;
+    font-size: 8px;
+    color: #4D5969;
+    border: 1px solid #DCDCE1;
+    box-shadow: 0px 1px 2px;
+    background-color: white;
     border-radius: 4px;
     cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3;
 }
 
 .bottom-info {
