--- a/css/UserMyportal.css
+++ b/css/UserMyportal.css
@@ -131,25 +131,32 @@ body {
     font-weight: bold;
 }
 
+.tb-tab.active > .row-cnt {
+    color: #2C7BE5;
+}
+
 /* ---------------테이블 ---------------*/
 table {
     width: 100%;
+    border: 1px solid #EDF2F9;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
 
 thead th {
     background-color: #f2f4f6;
-    padding: 10px;
+    padding: 10px 0px;
     text-align: left;
     font-size: 14px;
     text-align: center;
 }
+tr {
+    border-bottom: 1px solid #EDF2F9;
+}
 
 tbody td {
     font-size: 13px;
-    padding: 3px 3px;
-    border-bottom: 1px solid #ddd;
+    padding: 5px 0px;
     text-align: center;
 }
 
