--- a/css/UserMyportal.css
+++ b/css/UserMyportal.css
@@ -4,6 +4,11 @@ body {
     background-color: #EDF2F9;
 }
 
+#mem-info {
+    display: flex;
+    align-items: center;
+}
+
 .category {
     color: #748194;
     font-weight: bold;
