--- a/css/search.css
+++ b/css/search.css
@@ -9,7 +9,7 @@
     border-radius: 10px;
 }
 
-.div-style {
+.div-style, .date-style {
     width: 280px;
 }
 
@@ -35,40 +35,22 @@
     font-weight: bold;
 }
 
-#search-dept {
-    width: 280px;
-}
-
-.select-style {
-    width: 120px;
+/* 공통 스타일 정의 (input, select, textarea) */
+input, select {
+    width: 120px;   
     height: 30px;
     border: 1px solid #D9D9D9;
     border-radius: 3px;
     font-size: 10px;
     padding: 0 10px 0 10px;
-
 }
 
-input {
-    width: 120px;
-    border: 1px solid #D9D9D9;
-    border-radius: 3px;
-    height: 30px;
-    font-size: 10px;
-    padding: 10px;
-}
-
-.date-style {
+#search-dept {
     width: 280px;
 }
 
 .date-form {
     width: 130px;
-    border: 1px solid #D9D9D9;
-    border-radius: 3px;
-    height: 30px;
-    font-size: 10px;
-    padding: 10px;
 }
 
 .search-btn {
@@ -83,5 +65,4 @@ input {
     border: 1px solid #DCDCE1;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
-
 }
