--- a/css/search.css
+++ b/css/search.css
@@ -1,16 +1,26 @@
+/* 공통 스타일 정의 (input, select, textarea) */
+input, select {
+    width: 120px;   
+    height: 30px;
+    border: 1px solid #D9D9D9;
+    border-radius: 3px;
+    font-size: 10px;
+    padding: 0 10px;
+}
+
+/* 공통 스타일 정의 for .div-style, .date-style */
+.div-style, .date-style {
+    width: 280px;
+}
+
 #search-container {
     width: 1270px;
     height: 150px;
     background-color: white;
-    margin: 20px 0 0 30px;
     display: flex;
     justify-content: space-between;
     box-shadow: 4px 4px 10px rgba(190, 190, 190, 0.5);
     border-radius: 10px;
-}
-
-.div-style, .date-style {
-    width: 280px;
 }
 
 .ul-style {
@@ -33,16 +43,6 @@
     width: 70px;
     font-size: 13px;
     font-weight: bold;
-}
-
-/* 공통 스타일 정의 (input, select, textarea) */
-input, select {
-    width: 120px;   
-    height: 30px;
-    border: 1px solid #D9D9D9;
-    border-radius: 3px;
-    font-size: 10px;
-    padding: 0 10px 0 10px;
 }
 
 #search-dept {
