--- a/css/search.css
+++ b/css/search.css
@@ -1,6 +1,8 @@
+
+/* 검색 */
 /* 공통 스타일 정의 (input, select, textarea) */
-input, select {
-    width: 120px;   
+#prg-search, #search-dept{
+    width: 130px;   
     height: 30px;
     border: 1px solid #D9D9D9;
     border-radius: 3px;
@@ -47,10 +49,6 @@ input, select {
 
 #search-dept {
     width: 280px;
-}
-
-.date-form {
-    width: 130px;
 }
 
 .search-btn {
