--- a/css/srList.css
+++ b/css/srList.css
@@ -138,23 +138,35 @@ a {
     margin: 6px 0px;
 }
 
-/* 검색창 스타일 */
-#search {
-    height: 130px;
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
+/* 검색 */
+/* 공통 스타일 정의 (input, select, textarea) */
+#prg-search, #search-dept{
+    width: 130px;   
+    height: 30px;
+    border: 1px solid #D9D9D9;
+    border-radius: 3px;
+    font-size: 10px;
+    padding: 0 10px;
 }
 
+/* 공통 스타일 정의 for .div-style, .date-style */
 .div-style, .date-style {
     width: 280px;
 }
 
+#search-container {
+    width: 1270px;
+    height: 150px;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 4px 4px 10px rgba(190, 190, 190, 0.5);
+    border-radius: 10px;
+}
+
 .ul-style {
     display: flex;
-    margin: 20px 0 30px 30px;
+    margin: 30px 0 30px 30px;
     gap: 90px;
 }
 
@@ -178,10 +190,6 @@ a {
     width: 280px;
 }
 
-.date-form {
-    width: 130px;
-}
-
 .search-btn {
     width: 63px;
     height: 28px;
@@ -195,7 +203,6 @@ a {
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
 }
-
 /* -------------------------------------------- */
 
 
