--- a/css/srList.css
+++ b/css/srList.css
@@ -280,8 +280,8 @@ th {
 
 /* Pagination */
 
-#pagenation {
-    width: 98%;
+#pagination {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -289,6 +289,8 @@ th {
     background-color: #F9FAFD;
     position: absolute;
     bottom: 0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .page-btn {
