--- a/css/memList.css
+++ b/css/memList.css
@@ -175,6 +175,10 @@ a {
     gap: 30px;
 }
 
+.first-li {
+    margin-left: 30px;
+}
+
 #search-box {
     width: 1270px;
 }
@@ -256,8 +260,8 @@ tr {
 }
 
 td {
-    font-size: 15px;
-    padding: 10px 0px;
+    font-size: 13px;
+    padding: 5px 0px;
     text-align: center;
     line-height: 1;
     font-weight: 510;
@@ -269,6 +273,7 @@ th {
     padding: 10px 0px;
     font-size: 15px;
     text-align: center;
+    font-weight: 600;
 }
 
 /* Pagination */
@@ -278,23 +283,23 @@ th {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 45px;
+    height: 40px;
     background-color: #F9FAFD;
     position: absolute;
     bottom: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    
 }
 
 .page-btn {
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     display: flex;
     border: 1px solid #dee2e6;
     margin-right: 5px;
     align-items: center;
     justify-content: center;
+    font-size: 15px;
 }
 
 .page-btn.active {
@@ -305,6 +310,7 @@ th {
     width: 100px !important;
     margin-left: 50px;
     padding: 2px 10px 2px 10px;
+    font-size: 15px;
 }
 
 .detail-btn {
