--- a/css/hr.css
+++ b/css/hr.css
@@ -102,7 +102,7 @@ th {
     height: 20px;
     border: 1px solid #DCDCE1 !important;
     border-radius: 4px;
-    /* box-shadow: 0px 1px 3px rgb(0, 0, 0, 0.25); */
+    box-shadow: 0px 1px 3px rgb(0, 0, 0, 0.25);
     font-size: 9px;
     color: #4D5969;
     padding: 3px !important;
