--- a/css/srDetial.css
+++ b/css/srDetial.css
@@ -49,7 +49,15 @@ form{
     align-items: center; /* 수평 가운데 정렬 */
 }
 
-#relatedReference, #srTitle, #srContent, #srRequestNumber, #attachment{
+#relatedReference, #srTitle, #srRequestNumber, #attachment{
     width: 350px;
 }
 
+#srContent {
+    font-size: 8px;
+    border: 0.5px solid #D9D9D9;
+    border-radius: 3px;
+    width: 350px;
+    height: 75px;
+    margin: 4px 0px 4px 0px;
+}
