--- a/css/srPlan.css
+++ b/css/srPlan.css
@@ -4,3 +4,108 @@
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
 }
+
+#title {
+    font-size: 15px;
+    font-weight: 600;
+    margin: 12px 12px 5px 14px;
+    width: 109px;
+    height: 20px;
+    display: inline-block;
+}
+
+hr{
+    margin: 0px 0px 11px 0px;
+}
+
+/* 탭 */
+.tabs-container {
+    width: 400px;
+    height: 25px;
+    margin: 0px auto;
+}
+
+.nav-item {
+    width: 80px;
+    height: 25px;
+}
+
+.nav-link {
+    width: 80px;
+    height: 25px;
+    font-size: 10px;
+    color: #748194;
+    text-align: center;
+    padding: 5px !important;
+}
+
+.pg-tab.active {
+    border-bottom: 2px solid #2C7BE5 !important;
+    font-weight: bold;
+}
+
+.pg-tab.active > .row-cnt {
+    color: #2C7BE5;
+}
+
+label{
+    font-size: 8px;
+    width: 40px;
+}
+
+.form-group{
+    display: flex;              /* 가로 정렬 */
+    align-items: center;        /* 수직 가운데 정렬 */
+    gap: 15px;                  /* input과 button 사이의 간격 */
+}
+
+input{
+    height: 15px;
+    width: 140px;
+    font-size: 8px;
+    border: 0.5px solid #D9D9D9;
+    border-radius: 3px;
+    margin: 4px 0px 4px 0px;
+    padding: 2.5px 10px 2.5px 10px;
+}
+
+#request-type, #work-type, #status {
+    height: 15px;
+    width: 140px;
+    font-size: 8px;
+    border: 0.5px solid #D9D9D9;
+    border-radius: 3px;
+    padding: 0px 0px 0px 10px;
+    margin: 4px 0px 4px 0px;
+}
+
+#review{
+    font-size: 8px;
+    border: 0.5px solid #D9D9D9;
+    border-radius: 3px;
+    width: 340px;
+    height: 85px;
+    margin: 4px 0px 4px 0px;
+}
+
+form{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0px 20px;
+}
+
+
+#plan-btn {
+    width: 45px;
+    height: 20px;
+    border: 1px solid #DCDCE1;
+    border-radius: 4px;
+    box-shadow: 0px 1px 2px rgb(0, 0, 0, 0.25);
+    font-size: 10px;
+    color: #4D5969;
+    background-color: #FFFFFF;
+    padding: 3px !important;
+    margin-left: 3px;
+}
