--- a/css/srPlan.css
+++ b/css/srPlan.css
@@ -23,6 +23,8 @@ hr{
     width: 400px;
     height: 25px;
     margin: 0px auto;
+    justify-content: space-between;
+
 }
 
 .nav-item {
@@ -53,6 +55,13 @@ label{
     width: 40px;
 }
 
+#sr-plan-form{
+    border: 1px solid #EDF2F9;
+    padding: 0 3px 0 3px;
+    height: 190px;
+
+}
+
 .form-group{
     display: flex;              /* 가로 정렬 */
     align-items: center;        /* 수직 가운데 정렬 */
@@ -61,7 +70,7 @@ label{
 
 input{
     height: 15px;
-    width: 140px;
+    width: 130px;
     font-size: 8px;
     border: 0.5px solid #D9D9D9;
     border-radius: 3px;
@@ -71,7 +80,7 @@ input{
 
 #request-type, #work-type, #status {
     height: 15px;
-    width: 140px;
+    width: 130px;
     font-size: 8px;
     border: 0.5px solid #D9D9D9;
     border-radius: 3px;
@@ -83,9 +92,10 @@ input{
     font-size: 8px;
     border: 0.5px solid #D9D9D9;
     border-radius: 3px;
-    width: 340px;
+    width: 325px;
     height: 85px;
     margin: 4px 0px 4px 0px;
+    resize: none;
 }
 
 form{
@@ -106,6 +116,7 @@ form{
     font-size: 10px;
     color: #4D5969;
     background-color: #FFFFFF;
-    padding: 3px !important;
-    margin-left: 3px;
+    padding: 3px;
+    margin-right: 10px;
+
 }
