Update: "css겹치지 않도록 수정"

--- a/css/pg.css
+++ b/css/pg.css
@@ -5,30 +5,31 @@
     box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, 0.25);
 }
 
-.title {
+#title {
     font-size: 15px;
-    font-weight: 900;
-    margin-top: 10px;
-    margin-left: 15px;
+    font-weight: 600;
+    margin: 12px 12px 5px 14px;
+    height: 20px;
+    display: inline-block;
 }
 
 hr {
-    margin: 6px 0px;
+    margin: 0px 0px 11px 0px;
 }
 
 /* 탭 */
-.tabs-container {
+.pg-tabs-container {
     width: 400px;
     height: 25px;
     margin: 0px auto;
 }
 
-.nav-item {
+.pg-tabs-container .nav-item {
     width: 80px;
     height: 25px;
 }
 
-.nav-link {
+.pg-tabs-container .nav-link {
     width: 80px;
     height: 25px;
     font-size: 10px;
@@ -47,45 +48,45 @@ hr {
 }
 
 /* 테이블 */
-#table-container {
+#pg-table-container {
     width: 400px;
     border: 1px solid #EDF2F9;
     margin: 0px auto;
 }
 
-.col-1 {
+.pg-col-1 {
     width: 30px;
 }
-.col-2 {
+.pg-col-2 {
     width: 70px;
 }
-.col-3 {
+.pg-col-3 {
     width: 140px;
 }
-.col-4 {
+.pg-col-4 {
     width: 140px;
 }
-.col-5 {
+.pg-col-5 {
     width: 120px;
 }
 
-tr {
+#pg-table tr {
     height: 25px;
     border-bottom: 1px solid #EDF2F9;
 }
 
-td {
+#pg-table td {
     font-size: 10px;
-    padding: 5px 0px;
+    padding: 7px 0px;
     text-align: center;
     line-height: 1;
     font-weight: 510;
 }
 
-th {
+#pg-table  th {
     height: 30px;
     background-color: #EDF2F9;
-    padding: 5px 0px;
+    padding: 9px 0px;
     font-size: 10px;
     text-align: center;
 }
@@ -94,10 +95,12 @@ th {
 #save-btn {
     width: 45px;
     height: 20px;
-    border: 1px solid #DCDCE1 !important;
+    border: 1px solid #DCDCE1;
     border-radius: 4px;
-    /* box-shadow: 0px 1px 3px rgb(0, 0, 0, 0.25); */
+    box-shadow: 0px 1px 2px rgb(0, 0, 0, 0.25);
     font-size: 9px;
     color: #4D5969;
+    background-color: #FFFFFF;
     padding: 3px !important;
+    margin-left: 3px;
 }
