Update: "요청 처리정보 수정"

--- a/css/prgList.css
+++ b/css/prgList.css
@@ -43,7 +43,7 @@ a {
 }
 
 /* 네비게이션 아이템 스타일 */
-.nav-item {
+.side-nav-item {
     width: 190px;
     display: flex;
     align-items: center; /* 수직 가운데 정렬 */
@@ -88,21 +88,21 @@ a {
 }
 
 /* 네비게이션 링크 내부 아이콘과 텍스트 정렬 */
-.nav-link {
+.side-nav-link {
     display: flex;
     align-items: center; /* 수직 가운데 정렬 */
     justify-content: space-between; /* 아이콘과 텍스트 간의 간격을 유연하게 처리 */
 }
 
 /* chart 아이콘 스타일 */
-.nav-link #chart {
+.side-nav-link #chart {
     color: black; /* 아이콘 색상 */
     margin-right: 11px; /* 텍스트와 아이콘 사이의 간격 */
     font-size: 16px; /* 아이콘 크기 */
 }
 
 /* chevron 아이콘 스타일 */
-.nav-link #chevron {
+.side-nav-link #chevron {
     margin-left: auto; /* chevron 아이콘을 오른쪽으로 밀어 정렬 */
     margin-right: 20px; /* 오른쪽 간격 */
 }
@@ -238,7 +238,7 @@ label{
     width: 40px;
 }
 
-input{
+.detail-input{
     height: 15px;
     width: 140px;
     font-size: 8px;
@@ -248,21 +248,30 @@ input{
     padding: 2.5px 10px 2.5px 10px;
 }
 
-.form-group{
+.detail-form-group{
     display: flex;              /* 가로 정렬 */
     align-items: center;        /* 수직 가운데 정렬 */
     gap: 15px;                  /* input과 button 사이의 간격 */
 }
 
-form{
+#sr-detail-form{
     padding: 0px 5px 0px 5px;
     display: flex;
     flex-direction: column; /* 세로로 정렬 */
     align-items: center; /* 수평 가운데 정렬 */
 }
 
-#relatedReference, #srTitle, #srContent, #srRequestNumber, #attachment{
+#relatedReference, #srTitle, #srRequestNumber, #attachment{
     width: 350px;
+}
+
+#srContent {
+    font-size: 8px;
+    border: 0.5px solid #D9D9D9;
+    border-radius: 3px;
+    width: 350px;
+    height: 75px;
+    margin: 4px 0px 4px 0px;
 }
 
 /*------------------- 진척율 -------------------*/
