--- a/css/side-bar.css
+++ b/css/side-bar.css
@@ -19,7 +19,7 @@ a {
 }
 
 /* 네비게이션 아이템 스타일 */
-.nav-item {
+.side-nav-item {
     width: 190px;
     display: flex;
     align-items: center; /* 수직 가운데 정렬 */
@@ -64,21 +64,21 @@ a {
 }
 
 /* 네비게이션 링크 내부 아이콘과 텍스트 정렬 */
-.nav-link {
+.side-nav-link {
     display: flex;
     align-items: center; /* 수직 가운데 정렬 */
     justify-content: space-between; /* 아이콘과 텍스트 간의 간격을 유연하게 처리 */
 }
 
 /* chart 아이콘 스타일 */
-.nav-link #chart {
+.side-nav-link #chart {
     color: black; /* 아이콘 색상 */
     margin-right: 11px; /* 텍스트와 아이콘 사이의 간격 */
     font-size: 16px; /* 아이콘 크기 */
 }
 
 /* chevron 아이콘 스타일 */
-.nav-link #chevron {
+.side-nav-link #chevron {
     margin-left: auto; /* chevron 아이콘을 오른쪽으로 밀어 정렬 */
     margin-right: 20px; /* 오른쪽 간격 */
 }
