--- a/css/prgList.css
+++ b/css/prgList.css
@@ -92,6 +92,7 @@ a {
     display: flex;
     align-items: center; /* 수직 가운데 정렬 */
     justify-content: space-between; /* 아이콘과 텍스트 간의 간격을 유연하게 처리 */
+    
 }
 
 /* chart 아이콘 스타일 */
@@ -132,6 +133,133 @@ a {
 }
 .prg{
     width: 280px !important;
+}
+
+/* sr처리목록 */
+/* SR 목록 스타일 */
+#sr-list-title{
+    font-size: 15px;
+    font-weight: 600;
+    margin: 12px 12px 5px 14px;
+    width: 109px;
+    height: 20px;
+    display: inline-block;
+}
+
+#sr-list {
+    width: 800px;
+    margin-top: 23px;
+    height: 609px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
+    position: relative;
+}
+
+/* 테이블 */
+#table-container {
+    width: 780px;
+    border: 1px solid #EDF2F9;
+    margin: 0px auto;
+}
+
+.col-1 {
+    width: 30px;
+}
+.col-2 {
+    width: 100px;
+}
+.col-3 {
+    width: 80px;
+}
+.col-4 {
+    width: 180px;
+}
+.col-5 {
+    width: 70px;
+}
+.col-6 {
+    width: 90px;
+}
+.col-7 {
+    width: 90px;
+}
+.col-8 {
+    width: 70px;
+}
+.col-9 {
+    width: 70px;
+}
+
+tr {
+    height: 25px;
+    border-bottom: 1px solid #EDF2F9;
+}
+
+td {
+    font-size: 10px;
+    padding: 10px 0px;
+    text-align: center;
+    line-height: 1;
+    font-weight: 510;
+}
+
+th {
+    height: 30px;
+    background-color: #EDF2F9;
+    padding: 10px 0px;
+    font-size: 10px;
+    text-align: center;
+    font-weight: 600;
+}
+
+/* Pagination */
+
+#pagination {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    background-color: #F9FAFD;
+    position: absolute;
+    bottom: 0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.page-btn {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    border: 1px solid #dee2e6;
+    margin-right: 5px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+}
+
+.page-btn.active {
+    color: #3D86E7;
+}
+
+.row-select{
+    width: 100px !important;
+    margin-left: 50px;
+    padding: 2px 10px 2px 10px;
+    font-size: 15px;
+}
+
+.detail-btn {
+    width: 50px;
+    height: 20px;
+    font-size: 8px;
+    color: #4D5969;
+    border: 1px solid #DCDCE1;
+    box-shadow: 0px 1px 2px;
+    background-color: white;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 /* 공통 스타일 정의 for .div-style, .date-style */
@@ -203,12 +331,6 @@ a {
     margin-left: 25px;
 }
 
-/* SR 목록 스타일 */
-#sr-list {
-    margin-top: 23px;
-    height: 547px;
-}
-
 /*------------------- SR 요청 상세 정보 -------------------*/
 #sr-detail{
     background-color: #FFFFFF;
@@ -274,4 +396,126 @@ label{
     margin: 4px 0px 4px 0px;
 }
 
-/*------------------- 진척율 -------------------*/
+/*------------------- SR 요청 처리 정보 -------------------*/
+#sr-plan-info{
+    background-color: #FFFFFF;
+    width: 440px;
+    height: 283px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+#title {
+    font-size: 15px;
+    font-weight: 600;
+    margin: 12px 12px 5px 14px;
+    width: 109px;
+    height: 20px;
+    display: inline-block;
+}
+
+hr{
+    margin: 0px 0px 11px 0px;
+}
+
+/* 탭 */
+.tabs-container {
+    width: 400px;
+    height: 25px;
+    margin: 0px auto;
+    justify-content: space-between;
+
+}
+
+.nav-item {
+    width: 80px;
+    height: 25px;
+}
+
+.nav-link {
+    width: 80px;
+    height: 25px;
+    font-size: 10px;
+    color: #748194;
+    text-align: center;
+    padding: 5px !important;
+}
+
+.pg-tab.active {
+    border-bottom: 2px solid #2C7BE5 !important;
+    font-weight: bold;
+}
+
+.pg-tab.active > .row-cnt {
+    color: #2C7BE5;
+}
+
+/* --------------------------------- */
+
+label{
+    font-size: 8px;
+    width: 40px;
+}
+
+.form-group{
+    display: flex;              /* 가로 정렬 */
+    align-items: center;        /* 수직 가운데 정렬 */
+    gap: 15px;                  /* input과 button 사이의 간격 */
+}
+
+input{
+    height: 15px;
+    width: 130px;
+    font-size: 8px;
+    border: 0.5px solid #D9D9D9;
+    border-radius: 3px;
+    margin: 4px 0px 4px 0px;
+    padding: 2.5px 10px 2.5px 10px;
+}
+
+#request-type, #work-type, #status {
+    height: 15px;
+    width: 130px;
+    font-size: 8px;
+    border: 0.5px solid #D9D9D9;
+    border-radius: 3px;
+    padding: 0px 0px 0px 10px;
+    margin: 4px 0px 4px 0px;
+}
+
+#review{
+    font-size: 8px;
+    border: 0.5px solid #D9D9D9;
+    border-radius: 3px;
+    width: 325px;
+    height: 85px;
+    margin: 4px 0px 4px 0px;
+    resize: none;
+}
+
+#sr-plan-form{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0px 20px;
+    border: 1px solid #EDF2F9;
+    padding: 0 3px 0 3px;
+    height: 190px;
+
+}
+
+#plan-btn {
+    width: 45px;
+    height: 20px;
+    border: 1px solid #DCDCE1;
+    border-radius: 4px;
+    box-shadow: 0px 1px 2px rgb(0, 0, 0, 0.25);
+    font-size: 10px;
+    color: #4D5969;
+    background-color: #FFFFFF;
+    padding: 3px;
+    margin-right: 10px;
+
+}
